Fix: Scrollbar view on html, body 🧘

--- a/apps/web/src/styles/global.module.css
+++ b/apps/web/src/styles/global.module.css
@@ -33,9 +33,6 @@ html, body, #root {
   width: 100%;
   margin: 0%;
   padding: 0%;
-  position: fixed;
-  display: block;
-  overflow: auto;
 }
 
 #root  {
